added some code for security